<resources>
    <string name="app_name">Travel-Aligner</string>
    <string name="Login">Login</string>
    <string name="application_name">Travel-Aligner</string>
    <string name="email_Id">Enter Email ID</string>
    <string name="password">Password</string>
    <string name="sign_up">No Account yet? Create one</string>
    <string name="not_login">Not Login</string>
    <string name="welcome">Welcome</string>
    <string name="title_activity_nav_bar_main_menu">nav_bar_main_menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="arrivalCountry">Select Arrival Country</string>
    <string name="departureCountry">Select Departure Country</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="logout">Logout</string>
    <string name="one_way_trip">One way Trip</string>
    <string name="round_way_trip">Round way Trip</string>
    <string name="depart">Depart</string>
    <string name="arrival">Arrival</string>
    <string name="date">Departure Date</string>
    <string name="arrival_date">Return Date</string>
    <string name="remeber_me">Remeber Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="first_name">Enter First Name</string>
    <string name="last_name">Enter Last Name</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="create_account">Create Account</string>
    <string name="enter_password_again">Enter password again</string>
    <string name="enter_a_username">Enter a Username</string>
    <string name="enter_your_last_name">Enter your Last Name</string>
    <string name="enter_your_first_name">Enter your First Name</string>
    <string-array name="country">
        <item>Select a country</item>
        <item>India</item>
    </string-array>
</resources>